converted JSONException to SimpleException